Redo page calculation for jlmd to jump from one to the next.

--- a/ui/website/jlmd.htm
+++ b/ui/website/jlmd.htm
@@ -5,6 +5,7 @@
         <title>Julia MD live page</title>
         <!-- <link href="reset.css" rel="stylesheet" type="text/css" /> -->
         <link href="jlmd.css" rel="stylesheet" type="text/css" />
+        <!-- <link href="repl.css" rel="stylesheet" type="text/css" /> -->
         <link href="http://fonts.googleapis.com/css?family=Droid+Sans+Mono&v2" rel="stylesheet" type="text/css">
         <script type="text/javascript" src="localstorage.js"></script>
         <script type="text/javascript" src="modernizr-2.5.3.js"></script>
@@ -17,7 +18,12 @@
         <script type="text/javascript" src="jlmd.js"></script>
     </head>
     <body>
+        <div id="jlmd_error_div">
+        </div>
         <div id="main_markdown">
+             &nbsp;
+        </div>
+        <div id="jlmd_extras">
              &nbsp;
         </div>
     </body>
