Reorg filenames. Update jlmd examples.

--- a/ui/website/jlmd.htm
+++ b/ui/website/jlmd.htm
@@ -14,11 +14,13 @@
         <script type="text/javascript" src="jquery.autoresize.js"></script>
         <script type="text/javascript" src="d3.js"></script>
         <script type="text/javascript" src="layout.js"></script>
-        <script type="text/javascript" src="showdown-jlmd.js"></script>
+        <script type="text/javascript" src="jlmd_showdown.js"></script>
         <script type="text/javascript" src="jlmd.js"></script>
+        <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
+        <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
     </head>
     <body>
-        <div id="jlmd_error_div">
+        <div id="jlmd_error_div" class="color-scheme-error">
         </div>
         <div id="main_markdown">
              &nbsp;
